--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -11,6 +11,6 @@
       <h2>Your Balance: <%= Helpers.current_user(session).balance %></h2>
     
     <a href="/logout">Log Out</a>
-
+    <% end %>
   </body>
 </html>
