--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,10 +7,10 @@
   </head>
   <body id="page-top">
     <% if Helpers.is_logged_in?(session) %>
-      <h1>Hello <%= Helpers.current_user(session).username %></h1>
+      <h1>Welcome <%= Helpers.current_user(session).username %></h1>
       <h2>Your Balance: <%= Helpers.current_user(session).balance %></h2>
     
-    <a href="/logout">Log Out</a>
+      <a href="/logout">Log Out</a>
     <% end %>
   </body>
 </html>
